--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,13 @@
         }
         </script>
 
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="example.css">
     </head>
     <body>
+        <input type="text" id="urlInput" placeholder="Enter URL here">
+        <button id="searchButton">Search Text</button>
+
         <iframe id="iframeWindow" class="iframeWindow"></iframe>
     </body>
-    <script src="./script.js"></script>
+    <script src="example.js"></script>
 </html>
